# ClangTidyChecks

./: More.md  README.md
Cert/: README.md  cert-dcl03-c.md  cert-dcl21-cpp.md  cert-dcl50-cpp.md  cert-dcl54-cpp.md  cert-dcl58-cpp.md  cert-env33-c.md  cert-err09-cpp.md  cert-err34-c.md  cert-err52-cpp.md  cert-err58-cpp.md  cert-err60-cpp.md
Google/: README.md  google-build-explicit-make-pair.md  google-build-namespaces.md  google-build-using-namespace.md  google-default-arguments.md  google-explicit-constructor.md  google-global-names-in-headers.md  google-readability-braces-around-statements.md  google-readability-redundant-smartptr-get.md  google-runtime-int.md  google-runtime-member-string-references.md  google-runtime-operator.md  google-runtime-references.md
Misc/: README.md
Src/: CMakeLists.txt  cert-dcl03-c.cpp  cert-dcl21-cpp.cpp  cert-dcl54-cpp.cpp  cert-dcl58-cpp.cpp  cert-env33-c.cpp  cert-err09-cpp.cpp  cert-err34-c.cpp  cert-err34-c_compliant.cpp  cert-err52-cpp.cpp  cert-err58-cpp.cpp  cert-err58-cpp_compliant.cpp  cert-err60-cpp.cpp  cert_err52_cpp_compliant.cpp  google-build-explicit-make-pair.cpp  google-build-namespaces.cpp  google-build-using-namespace.cpp  google-default-arguments.cpp  google-explicit-constructor.cpp  google-global-names-in-headers.cpp  google-namespace.cpp  google-readability-braces-around-statements.cpp  google-readability-casting.cpp  google-readability-namespace-comments.cpp  google-readability-redundant-smartptr-get.cpp  google-runtime-int.cpp  google-runtime-member-string-references.cpp  google-runtime-operator.cpp  google-runtime-references.cpp  test.cpp  test_2.cpp
Src/Inputs/: global-names-in-headers.h  google-namespaces.h  test2.h
